@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.779 2006-09-08 15:46:19 castaglia Exp $
+$Id: NEWS,v 1.780 2006-09-08 16:41:54 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -99,6 +99,7 @@ CVS
   doc/contrib/mod_wrap2.html for more details.
 - Bug 2825 - SSL/TLS CRLs are not working properly.
 - Bug 2835 - Group quotas not honored for supplemental group membership.
+- Bug 2837 - Defines improperly persist across daemon restarts.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
